--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Scrollbar */
+/* width */
+::-webkit-scrollbar {
+   width: 10px;
+   height: 5px;
+   border-radius: 10px;
+
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+   background: hsl(var(--nc));
+   border-radius: 10px;
+
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+   background: hsl(var(--p));
+   border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+   background: hsl(var(--pf));
+}
